--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "test:electron": "npx cypress open --config-file cypress.config.electron.ts",
     "test:run:chrome": "npx cypress run --config-file cypress.config.chrome.ts",
     "test:run:edge": "npx cypress run --config-file cypress.config.edge.ts",
-    "test:run:electron": "npx cypress run --config-file cypress.config.electron.ts"
+    "test:run:electron": "npx cypress run --config-file cypress.config.electron.ts",
+    "allure:generate": "allure generate allure-results --clean -o allure-report",
+    "allure:open": "allure open allure-report"
   },
   "repository": {
     "type": "git",
@@ -29,11 +31,9 @@
   "devDependencies": {
     "@badeball/cypress-cucumber-preprocessor": "^22.0.1",
     "@bahmutov/cypress-esbuild-preprocessor": "^2.2.4",
+    "allure-commandline": "^2.33.0",
     "cypress": "^14.2.1",
     "cypress-xpath": "^2.0.1",
-    "dotenv": "^16.4.7",
-    "mochawesome": "^7.1.3",
-    "mochawesome-merge": "^5.0.0",
-    "mochawesome-report-generator": "^6.2.0"
+    "dotenv": "^16.4.7"
   }
 }
