--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,12 +31,12 @@ jobs:
         run: |
           npm run allure:generate
           mkdir -p public
-          cp -r allure-report public/allure-report
+          mv allure-report public/allure-report
 
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           branch: gh-pages
-          folder: public
+          folder: public/allure-report
           clean: true
           token: ${{ secrets.GITHUB_TOKEN }}
