--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
   "devDependencies": {
     "@badeball/cypress-cucumber-preprocessor": "^22.0.1",
     "@bahmutov/cypress-esbuild-preprocessor": "^2.2.4",
-    "@shelex/cypress-allure-plugin": "^2.41.0",
     "allure-commandline": "^2.33.0",
+    "allure-cypress": "^3.2.1",
     "cypress": "^14.2.1",
     "cypress-xpath": "^2.0.1",
     "dotenv": "^16.4.7"
