--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,9 +35,14 @@ jobs:
           mkdir -p public
           mv allure-report public/allure-report
 
-      - name: Commit and Push Report to Another Branch
+      - name: Set Git user info
+        run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+
+      - name: Commit and Push Report to gh-pages
         run: |
           git checkout -b gh-pages
           git add public/allure-report
           git commit -m "Add new Allure report"
-          git push --force https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} gh-pages
+          git push --force origin gh-pages
