--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,17 +32,12 @@ jobs:
       - name: Generate Allure Report
         run: |
           npm run allure:generate
-          mkdir -p public
-          mv allure-report public/allure-report
+          mkdir -p public/allure-report
+          mv allure-report/* public/allure-report/
 
-      - name: Set Git user info
-        run: |
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "actions@github.com"
-
-      - name: Commit and Push Report to gh-pages
-        run: |
-          git checkout -b gh-pages
-          git add public/allure-report
-          git commit -m "Add new Allure report"
-          git push --force origin gh-pages
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v4
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./public/allure-report
+          publish_branch: gh-pages
